- kleine Schreibfehler ausgebessert
git-svn-id: https://svn.lug-jena.de/uni-skripte@295 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/schmeisser-ana3/skript.latex
+++ b/schmeisser-ana3/skript.latex
@@ -2878,7 +2878,7 @@ Matrix $A(x)$ positiv definit auf $\Omega$ ist.
 Sei $x\in\R^{n}$ ein Punkt im $\R^{n}$ (Ortskoordinate) und $t\in\R$
 (Zeit). $u=u(x,t)$
 
-Gegengeben ist $f(x,t)$. Gelöscht werden soll:
+Gegeben ist $f(x,t)$. Gelöscht werden soll:
 \begin{gather*}
   u_{t}(x,y) - a^{2}\Delta u(x,t) = f(x,y)
 \end{gather*}
@@ -2887,7 +2887,7 @@ Die Gleichung heißt \emph{Wärmeleitungsgleichung} oder
 
 Gesucht ist $u(x,t)$ mit $x\in\R^{n}$ und $t>0$.
 
-Diese Gleichung ist auch nur eine Spezialfall einer \emph{parabolischen
+Diese Gleichung ist auch nur ein Spezialfall einer \emph{parabolischen
 Differentialgleichung}:
 \begin{gather*}
   u_{t} - \Div K \grad u + \sprod{\vec{b}}{\grad u} + cu = f(x,t)
@@ -2972,8 +2972,8 @@ Differentialgleichung}:
 
 \begin{bemerk}
   Die Fundamentallösung der Wärmeleitungsgleichung $\Phi(x,t)$ geht für
-  $t\rightarrow0+$ -- wenn man sich also immer mehr zum Startzeitpunkt
-  zurück begibt -- für $x=0$ gegen Unendlich und für $x\not=0$ gegen 0.
+  $t\rightarrow0+$ --- wenn man sich also immer mehr zum Startzeitpunkt
+  zurück begibt --- für $x=0$ gegen Unendlich und für $x\not=0$ gegen 0.
   \help{haben die Physiker dafür eine anschauliche Interpretation?} Siehe
   \autoref{fig:5}
   \begin{gather*}
@@ -3474,14 +3474,14 @@ ohne Beweis: Das Cauchy-Problem hat höchstens eine Lösung!
 \subsection{Wellengleichung -- schwingende Saite}
 
 Wir betrachten das Anschlagen oder Zupfen einer Saite eines Instruments
-der Länge $l$. Die Anfangsauslenkung sei gegeben durch $u_{0}(x)$.
+der Länge $l$. Die Anfangsauslenkung durch $u_{0}(x)$ gegeben.
 \help{was ist dann $u_{1}$?} Wie verändert die Saite ihre Lage über die
 Zeit?
 
 \begin{enumerate}
  \item\label{enu:1} $u_{tt} - c^{2} u_{xx} =0\quad(x\in (0,l), t>0)$
- \item\label{enu:2} $u(0,t) = u(l,t) =0\quad(t>0)$ ist die Randbedingung,
-  $u_{1}(x)$ die Anfangsgeschwindigkeit
+ \item\label{enu:2} $u(0,t) = u(l,t) =0\quad(t>0)$ ist die
+   Randbedingung und $u_{1}(x)$ die Anfangsgeschwindigkeit
  \item\label{enu:3} $u(x,0) = u_{0}(x)\quad(x\in(0,l))$ und $u_{t}(x,0) =
   u_{1}(x)$ sind die Anfangsbedingung
 \end{enumerate}
@@ -3490,7 +3490,7 @@ Diesen Typ von Fragestellungen bezeichnen wir als
 \emph{Rand-Anfangswert-Problem} für die homogene Wellengleichung.
 
 Noch einige Bezeichnungen: $c=\sqrt{\frac{s}{\rho}}$, wobei $s$ die
-Spannung und $\rho$ die die Dichte der Saite ist.
+Spannung und $\rho$ die Dichte der Saite ist.
 
 \subsubsection{Separation}
 
@@ -3588,7 +3588,7 @@ d.\,h.
 Beim Ableiten von $u$ nach $t$ haben wir den Konvergenzradius der Reihe
 ignoriert (nicht betrachtet oder halt \obda machbar)
 
-Wir haben jetzt zwei gleiche Problem gefunden: einmal für $u_{0}$ mit
+Wir haben jetzt zwei gleiche Probleme gefunden: einmal für $u_{0}$ mit
 $a_{k}$ und $u_{1}$ mit $\tilde{b_{k}}$.
 
 % Sollte vielleicht besser ein \paragraph sein
@@ -3596,7 +3596,7 @@ $a_{k}$ und $u_{1}$ mit $\tilde{b_{k}}$.
 
 Verwende:
 \begin{gather*}
-  \int_{0}^{l} \sin(\frac{k\pi}{l} x)  \sin \frac{j\pi}{l} x\,dx =
+  \int_{0}^{l} \sin\bigg(\frac{k\pi}{l} x\bigg)  \sin \frac{j\pi}{l} x\,dx =
      \begin{cases}
        0 & j\not=k\\ \frac{l}{2} & j=k
      \end{cases}\\
@@ -3615,9 +3615,9 @@ Machen wir erstmal eine Analyse, was wir erhalten: Annahme
 \autoref{eq:30} gilt, dann haben wir
 \begin{align*}
   \int_{0}^{l}\sin\frac{k\pi}{l} x u_{0}(x)\,dx &= \sum_{j=1}^{\infty}
-     a_{j} \int_{0}^{l} \sin (\frac{j\pi}{l} x) \sin(\frac{k\pi}{l}
-     x)\,dx &(k\in\N)\\
-  &= a_{k} \int_{0}^{l} (\sin\frac{k\pi}{l} x)^{2}\,dx = a_{k}\frac{l}{2}
+     a_{j} \int_{0}^{l} \sin \bigg(\frac{j\pi}{l} x\bigg) \sin\bigg(\frac{k\pi}{l}
+     x\bigg)\,dx &(k\in\N)\\
+  &= a_{k} \int_{0}^{l} \bigg(\sin\frac{k\pi}{l} x\bigg)^{2}\,dx = a_{k}\frac{l}{2}
 \end{align*}
 
 Wenn es also möglich ist, dann müssen die Koeffizienten so aussehen:
@@ -3643,7 +3643,7 @@ bezeichnet man als die Schwingungsdauer und $\nu=\frac{1}{T}$ als die
 (Grund-)Frequenz. Die Fouriertheorie besagt, dass sich $f$ durch
 Teilschwingungen $f_{k}$ beschreiben lässt. (Wichtige Aussage der
 Fouriertheorie: Jede Schwingung lässt sich als Summe (Überlagerung) von
-Einzelschwingung darstellen)
+Einzelschwingungen darstellen)
 \begin{gather*}
   f_{k}(t) = a_{k} \cos\frac{ck\pi}{l} t + b_{k}\sin \frac{ck\pi}{l} t
 \end{gather*}
@@ -3747,7 +3747,7 @@ Raum $R([-l,l])$ als einen euklidischen Vektorraum mit
   \end{gather*}
 \end{itemize}
 
-Man kann jetzt leicht zeigen, dass all diese Integrale existtieren (da
+Man kann jetzt leicht zeigen, dass all diese Integrale existieren (da
 Riemann-integrierbar), das Skalarprodukt alle Bedingungen eines
 Skalarprodukts und die Norm alle Bedingungen einer Norm erfüllt. Also ist
 $R([-l,l])$ ein normierter linearer Raum.
@@ -3758,10 +3758,10 @@ $\norm{f_{j}-f} = (\int_{-l}^{l} \abs{f_{j}(x) - f(x)}^{2}\,dx
 
 Wir betrachten ein Orthonormalsystem in dem Raum
 \begin{gather*}
-  \{ \underbrace{\frac{1}{\sqrt{2l}}}_{=:\phi_{0}} \} \cup
-     \{ \underbrace{\frac{1}{\sqrt{l}}\cos\frac{k\pi}{l} x}_{=:\phi_{k}},
+  \bigg\{ \underbrace{\frac{1}{\sqrt{2l}}}_{=:\phi_{0}} \bigg\} \cup
+     \bigg\{ \underbrace{\frac{1}{\sqrt{l}}\cos\frac{k\pi}{l} x}_{=:\phi_{k}},
        \underbrace{\frac{1}{\sqrt{l}}\sin\frac{k\pi}{l} x}_{=:\psi_{k}}:
-       k\in\N\}
+       k\in\N\bigg\}
 \end{gather*}
 
 d.\,h. es gilt für $j\in\N_{0}, k\in\N$
@@ -3797,8 +3797,8 @@ $a_{k}$ und $b_{k}$ heißen \emph{Fourierkoeffizienten} von $f$.
 \emph{Fourierreihe} zur Rekonstruktion der Funktion mithilfe der
 Fourierkoeffizienten:
 \begin{gather*}
-  s_{n}f(x) := \frac{a_{0}}{2} + \sum_{k=1}^{n}(a_{k}\cos\frac{k\pi}{l} x
-     + b_{k} \sin\frac{k\pi}{l} x)
+  s_{n}f(x) := \frac{a_{0}}{2} + \sum_{k=1}^{n}\bigg(a_{k}\cos\frac{k\pi}{l} x
+     + b_{k} \sin\frac{k\pi}{l} x\bigg)
 \end{gather*}
 ist die $n$-te Partialsumme der Fourierreihe, wobei $n\in\N_{0}$.
 
@@ -3821,7 +3821,7 @@ d.\,h.
 \end{gather}
 (das ist die Parseval'sche Gleichung)
 
-Stellt man eine weiter Anforderung (Punktweise Konvergenz
+Stellt man eine weitere Anforderung (Punktweise Konvergenz
 $\sum_{k=1}^{\infty} (\abs{a_{k}}+ \abs{b_{k}}) <\infty$) an die
 Fourierkoeffizienten, so erhält man eine gleichmäßige Konvergenz für die
 Fourierreihe
@@ -3829,10 +3829,10 @@ Fourierreihe
   \sup_{x\in[-l,l]} \abs{s_{n}f(x) - f(x)}
      \xrightarrow{n\rightarrow\infty} 0
 \end{gather*}
-da $\sum_{k=1}^{\infty} (\abs{a_{k}}+ \abs{b_{k}}) <\infty$ eine oberer
+da $\sum_{k=1}^{\infty} (\abs{a_{k}}+ \abs{b_{k}}) <\infty$ eine obere
 Majorante für die Fourierreihe ist.
 
-Da jedes Folgengleid stetig ist, ist auch $f$ stetig und jedes Folgeglied
+Da jedes Folgenglied stetig ist, ist auch $f$ stetig und jedes Folgeglied
 periodisch ($f(-l)=f(l)$) muss auch die Funktion periodisch sein: $f\in
 C_{perio}([-l,l])$.
 
@@ -3857,7 +3857,7 @@ $\Rightarrow$ $\exists\lim_{n\rightarrow\infty} S_{n}f(x_{0}) =
 
 Man darf Fourierreihen \emph[index=Fourierreihe!differenzieren u.\,%
 integrieren,rand=Fourierr. diff. u. int.]{differenzieren \textnormal{und}
-integrieren}, falls zusätzliche Bedingungen an der Funktion erfüllt sind.
+integrieren}, falls zusätzliche Bedingungen an die Funktion erfüllt sind.
 
 Sinus-Reihen und Cosinus-Reihen (vgl. 9.3.1\todo{link}): Betrachten eine
 Funktion $f$, die nur auf $[0,l]$ definiert ist. Setzen wir $f$ gerade
@@ -4001,7 +4001,8 @@ Rand-Anfangswert-Problem:
   \end{gather*}
 \end{enumerate}
 
-\minisec{(B.2) $f(x,t)\not= 0, \mu_{1}(t) =\mu_{2}(t)=0, u_{0}(x) =0$}
+% Ich kann kein B.1 finden. Daher in B geaendert.
+\minisec{(B) $f(x,t)\not= 0, \mu_{1}(t) =\mu_{2}(t)=0, u_{0}(x) =0$}
 Ansatz:
 \begin{gather*}
   u(x,t) = \sum_{k=1}^{\infty} T_{k}(t) \sin kx
@@ -4128,7 +4129,7 @@ Lösungsmethode:
       u_{j}\big|_{\partial\Omega} =0
     \end{gather*}
 
-    Wir machen wieder für die Seperation den Ansatz $u(x,y) = X(x) Y(y)$
+    Wir machen wieder für die Separation den Ansatz $u(x,y) = X(x) Y(y)$
     mit $X(0) = X(\pi) = 0$ und $Y(0) = Y(\pi) =0$ und bekommen die zwei
     Teilproblem:
     \begin{enumerate}
@@ -4159,7 +4160,7 @@ Lösungsmethode:
     und Eigenfunktionen $u_{m,n}(x,y) = b_{m,n} \sin mx \sin ny$
 
    \item Superposition: Es ist leicht zu sehen, dass sich die beiden
-    Sinus-Terme orthogonal zueinander sind und wir können in eine
+    Sinusterme orthogonal zueinander sind und wir können in eine
     Doppelreihe entwickeln.
     \begin{gather*}
       f(x,y) = \sum_{m=1}^{\infty} \sum_{n=1}^{\infty} b_{m,n} \sin mx
@@ -4190,7 +4191,7 @@ Lösungsmethode:
       Rand, Häufungspunkt
      \item Konvergenz und Grenzwert für Folgen und Reihen
     \end{itemize}
-   \item für eine Funktion $f\colon G\rightarrow\C$ mit dem Wertebereich
+   \item Eine Funktion $f\colon G\rightarrow\C$ mit dem Wertebereich
     $G\subset\C$ offen nennen wir eine \emph{komplexe Funktion}. Bereits
     bekannt ist: $\lim_{z\rightarrow z_{0}} f(z)$, $f$ stetig in $z_{0}$,
     Sätze über stetige Funktionen
@@ -4202,7 +4203,7 @@ Lösungsmethode:
     \end{gather*}
     wobei $u,v\colon G\subset\R^{2} \rightarrow \R$. Die Menge $\{ (x,y)
     \colon x+iy\in G\subset\C\} = \tilde{G} \subset \R^{2}$ kann auch mit
-    einer Menge von komplexen Zahlen identifiert werden ($\cong G$). Wir
+    einer Menge von komplexen Zahlen identifiziert werden ($\cong G$). Wir
     fassen also $G$ als Gebiet im $\R^{2}$ und in $\C$ auf.
   \end{enumerate}
 \end{bemerk}
@@ -4210,7 +4211,7 @@ Lösungsmethode:
 \begin{bsp}
   \begin{enumerate}
    \item $f(z) = z^{2} = (x+iy)^{2} = x^{2}-y^{2} + i2xy$ -- Strahlen
-    werden auf Strahlen abgebietdet, Sektoren auf Sektoren
+    werden auf Strahlen abgebildet, Sektoren auf Sektoren
    \item für $z\not=0$ sei $f(z) = \frac{1}{z} =
     \frac{x-iy}{x^{2}+y^{2}}$ -- Kreise werden auf Kreise abgebildet
    \item $f(z) = e^{z} = \sum_{k=0}^{\infty} \frac{z^{k}}{k!} =
@@ -4223,8 +4224,8 @@ Lösungsmethode:
 \begin{defini}
   Wir betrachten eine Menge $D\subset\C$ und einen inneren Punkt
   $z_{0}\in D^{0}\not=\emptyset$. Wir nennen $f$
-  \emph[rand=komplexdiff'bar]{komplexdifferenzierbar} in $z_{0}$ \gdwdef
-  der Grenzwert des Differenzenquotiens existiert und eine komplexe Zahl
+  \emph[rand=komplexdiff'bar]{komplex differenzierbar} in $z_{0}$ \gdwdef
+  der Grenzwert des Differenzenquotient existiert und eine komplexe Zahl
   ist. Diesen Grenzwert bezeichnen wir dann als \emph[index=komplexe
   Funktion!Ableitung]{Ableitung} von $f$ an der Stelle $z_{0}$.
   \begin{gather*}
@@ -4239,9 +4240,9 @@ Lösungsmethode:
   \begin{enumerate}
    \item $f(z) = z^{n}$ für $n\in\N$ $\Rightarrow$ $f'(z) = n z^{n-1}$
     $\forall z$
-   \item $f(z) = \frac{1}{z}$ ist komplexdifferenzierbar in allen Punkten
+   \item $f(z) = \frac{1}{z}$ ist komplex differenzierbar in allen Punkten
     $z\not=0$, $f'(z) = -\frac{1}{z^{2}}$
-   \item $f(z) = \Re z$ nirgends komplexdifferenzierbar: läuft man auf
+   \item $f(z) = \Re z$ nirgends komplex differenzierbar: läuft man auf
     der Geraden $z=x+iy_{0}$ auf $z_{0}$ zu, so ergibt sich für den
     Differenzenquotienten $\frac{f(z) - f(z_{0}) }{z-z_{0}} =
     \frac{x-x_{0}}{x-x_{0}} =1$. Nähert man sich dem Punkt auf der
@@ -4249,7 +4250,7 @@ Lösungsmethode:
     $\frac{f(z) - f(z_{0}) }{z-z_{0}} = \frac{x_{0}-x_{0}}{y-y_{0}} = 0$.
     Die beiden Grenzwerte sind nicht gleich und damit existiert der Limes
     nicht.
-   \item $f(z) = e^{z}$ komplexdifferenzierbar, $(e^{z})' = e^{z}$
+   \item $f(z) = e^{z}$ komplex differenzierbar, $(e^{z})' = e^{z}$
     \begin{gather*}
       e^{z} -e^{z_{0}} = e^{z_{0}}(e^{z-z_{0}} -1) = e^{z_{0}}
          \sum_{k=1}^{\infty} \frac{(z-z_{0})^{k}}{k!} = e^{z_{0}}
@@ -4263,7 +4264,7 @@ Lösungsmethode:
   Sei $f$ wie in \todo{link: Def 3}. Dann sind folgende Aussagen
   äquivalent:
   \begin{enumerate}
-   \item $f$ ist komplexdifferenzierbar in $z_{0}$
+   \item $f$ ist komplex differenzierbar in $z_{0}$
    \item $\exists c\in\C$ und $\frac{f(z)-f(z_{0}) - c(z-z_{0})}{z-z_{0}}
     \xrightarrow{z\rightarrow z_{0}} 0$. Dann ist $c = f'(z_{0})$.
    \item $\exists h\colon D\rightarrow \C$ stetig in $z_{0}$ mit $f(z) =
@@ -4300,7 +4301,7 @@ D\rightarrow\R, D\subset\R^{2}$
   Ist $f$ gegeben wie oben und $z_{0} = x_{0}+iy_{0}\in
   D^{0}\not=\emptyset$, dann gilt:
   \begin{enumerate}
-   \item $f$ komplexdifferenzierbar in $z_{0}$ \gdw $u,v$ sind (total)
+   \item $f$ komplex differenzierbar in $z_{0}$ \gdw $u,v$ sind (total)
     differenzierbar in $(x_{0},y_{0})$ und es gelten die
     Cauchy-Riemannschen Differentialgleichungen
     \begin{align*}
@@ -4363,11 +4364,11 @@ D\rightarrow\R, D\subset\R^{2}$
   \begin{enumerate}
    \item Eine Funktion $f\colon D \rightarrow \C$ ($D\subset\C$ und offen)
     heißt \emph{holomorph} in $z_{0}\in D$ \gdwdef $f$ ist
-    komplexdifferenzierbar in einer Umgebung $K_{\delta}(z_{0}) = \{ z\colon
+    komplex differenzierbar in einer Umgebung $K_{\delta}(z_{0}) = \{ z\colon
     \abs{z-z_{0}}<\delta\}$.
    \item Eine Funktion $f\colon D \rightarrow \C$ ($D\subset\C$ und offen)
     heißt \emph{holomorph} \gdwdef $f$ ist holomorph in \textit{jedem}
-    Punkt $z\in D$. (\gdw $f$ ist komplexdifferenzierbar in jedem Punkt
+    Punkt $z\in D$. (\gdw $f$ ist komplex differenzierbar in jedem Punkt
     von $D$)
   \end{enumerate}
 \end{defini}
@@ -4375,10 +4376,10 @@ D\rightarrow\R, D\subset\R^{2}$
 \begin{folger}
   \begin{enumerate}
    \item $f$ differenzierbar in $z_{0}=x_{0}+iy_{0}$ $\Rightarrow$ Es
-    gelten die Cauchy-Riemannsche-Differentialgleichungen in
+    gelten die Cauchy-Riemannsche Differentialgleichungen in
     $(x_{0},y_{0})$ (eine notwendige Bedingung für Differenzierbarkeit)
    \item $u$ und $v$ sind stetig differenzierbar in $(x_{0},y_{0})$ und
-    es gelten die Cauchy-Riemannsche-Differentialgleichungen
+    es gelten die Cauchy-Riemannsche Differentialgleichungen
     $\Rightarrow$ $f$ ist differenzierbar in $z_{0} = x_{0}+iy_{0}$ (eine
     hinreichende Bedingung für Differenzierbarkeit)
    \item $f$ holomorph in $G\subset\C$ und $u,v\in C^{2}(G)$
@@ -4389,7 +4390,7 @@ D\rightarrow\R, D\subset\R^{2}$
 
   \begin{proof}
     nur von (3): Aus \todo{Satz 1} folgt, dass die
-    Cauchy-Riemannsche-Differentialgleichungen gelten, falls $f$
+    Cauchy-Riemannsche Differentialgleichungen gelten, falls $f$
     holomorph ist
     \begin{gather*}
       \begin{split}
@@ -4416,7 +4417,7 @@ D\rightarrow\R, D\subset\R^{2}$
     $f(z) = x-iy$ $\Rightarrow$ $u_{x}=1 \not= v_{y} =-1$
    \item $f(z) = \abs{z}^{2} = x^{2}+y^{2}$ ist differenzierbar in $z=0$,
     aber sie ist nirgends holomorph\\
-    Cauchy-Riemannsche-Differentialgleichungen:
+    Cauchy-Riemannsche Differentialgleichungen:
     \begin{gather*}
       u_{x} = 2x = v_{y} = 0 \Leftrightarrow x=0\\
       u_{y} = 2y = -v_{x} = 0 \Leftrightarrow y=0
@@ -4450,7 +4451,7 @@ D\rightarrow\R, D\subset\R^{2}$
     = \Div \grad v = -u_{yx}+u_{xy} = 0$ (nach Satz von Schwarz).
 
     Außerdem ist $v_{x} = -u_{y}$ und $v_{y} = u_{x}$, d.\,h. die
-    Cauchy-Riemannsche-Differentialgleichungen gelten und somit ist
+    Cauchy-Riemannsche Differentialgleichungen gelten und somit ist
     $u+iv$ harmonisch.
   \end{proof}
 \end{satz}
@@ -4461,7 +4462,7 @@ D\rightarrow\R, D\subset\R^{2}$
 
   Dann gilt:
   \begin{enumerate}
-   \item $f$ ist beliebig oft komplex differenzierbar (insbesonder ist
+   \item $f$ ist beliebig oft komplex differenzierbar (insbesondere ist
     sie damit holomorph auf $D = \{ z\big| \abs{z-z_{0}}<R \}$ und
     $f^{(j)}(z) = \sum_{k=0}^{\infty} a_{k} k(k-1)\ldots
     (k-j+1)(z-z_{0})^{k-j}$.
@@ -4475,7 +4476,7 @@ D\rightarrow\R, D\subset\R^{2}$
          \quad\text{absolut konvergent in $D$ (d.\,h.
          $\sqrt[k]{k}\rightarrow 1$)}
     \end{gather*}
-    wir wählen ein festen $z\in D$ und beschränken unsere Betrachtungen
+    wir wählen ein festes $z\in D$ und beschränken unsere Betrachtungen
     auf ein $K_{\delta}$ mit $\overline{K_{\delta}(z)}\subseteq D$.
     Weiterhin gibt es ein $\rho<R$ mit $\abs{w} \leq \rho$ für $w\in
     K_{\delta}(z)$.
@@ -4509,10 +4510,10 @@ D\rightarrow\R, D\subset\R^{2}$
          -kz^{k-1} } + 2\sum_{k=n+1}^{\infty} \abs{a_{k}} k\rho^{k-1}
     \end{align*}
     für hinreichend großes $n\geq n_{0}(\epsilon)$ lässt sich der zweite
-    Summand beliebig klein machen. Für den ersten Summendan, kann man den
+    Summand beliebig klein machen. Für den ersten Summanden, kann man den
     Betrag $\abs{\frac{w^{k}-z^{k}}{w-z}-kz^{k-1} }$ durch $\epsilon
     (\sum_{k=1}^{n}\abs{a_{k}})^{-1}$ abschätzen für $\abs{z-w}
-    <\delta(\epsilon)$. Damit kann die Gesamte Summe durch $2\epsilon$
+    <\delta(\epsilon)$. Damit kann die gesamte Summe durch $2\epsilon$
     abgeschätzt werden.
   \end{proof}
 \end{satz}
@@ -4545,7 +4546,7 @@ D\rightarrow\R, D\subset\R^{2}$
 \section{Integration}
 \subsection{Komplexe Kurvenintegrale}
 
-Zu beginn einige Wiederholungen:
+Zu Beginn einige Wiederholungen:
 \begin{bemerk}
   Kurven in $\C$ (oder $\R^{2}$) vergleiche mit Abschnitt 7.2 und \autoref{sec:8.1.2}
   \begin{itemize}
@@ -4585,7 +4586,7 @@ Zu beginn einige Wiederholungen:
          \sqrt{\dot{\alpha}(t)^{2} + \dot{\beta}(t)^{2}} dt\qquad g(t) =
          \alpha(t)+i\beta(t)
     \end{gather*}
-    $h$ ist stetig $\Rightarrow$ Rieman-Integral existiert
+    $h$ ist stetig $\Rightarrow$ Riemannintegral existiert
 
     $L$ heißt \emph[index=Länge einer Kurve]{Länge} von $\Gamma$
 
@@ -4631,7 +4632,7 @@ Zu beginn einige Wiederholungen:
   \begin{bmatrix}v\\u\end{bmatrix}$ Vektorfelder sind konservativ $\sim$
   falls $G$ sternförmig (\todo{link: Satz 8.1.2/14}): $u_{y}=-v_{x}
   \wedge v_{y}= u_{x}$ $\sim$ die
-  Cauchy-Riemannsche-Differentialgleichungen gelten.
+  Cauchy-Riemannschen Differentialgleichungen gelten.
 \end{bemerk}
 
 \begin{satz}[Cauchy'scher Integralsatz für sternförmige Gebiete]\label{satz:2}
@@ -4647,7 +4648,7 @@ Zu beginn einige Wiederholungen:
     Wenn $f=u+iv$ holomorph ist, dann hat \todo{link:satz 10.1.2/10}
     gezeigt, dass $u$ und $v$ differenzierbar (jedoch nicht stetig
     differenzierbar) sind und die
-    Cauchy-Riemannsche-Differentialgleichungen $u_{x} = v_{y}, u_{y} =
+    Cauchy-Riemannschen Differentialgleichungen $u_{x} = v_{y}, u_{y} =
     -v_{x}$ gelten. Außerdem ist $f'(z) = u_{x} + iv_{x} = v_{y}-iu_{y}$.
     Die Forderung nach Stetigkeit von $f'$ liefert und auch, dass $u_{x},
     u_{y}, v_{x}$ und $v_{y}$ stetig in $G$ sind, d.,h. $u$ und $v$ sind
@@ -4710,7 +4711,7 @@ Zu beginn einige Wiederholungen:
 
   \begin{proof}
     Da $F$ in $t_{0}$ differenzierbar gelten die
-    Cauchy-Riemannsche-Differentialgleichungen und weiter analog zum
+    Cauchy-Riemannschen Differentialgleichungen und weiter analog zum
     reellen Fall ($F$ als Realteil + Imaginärteil schreiben, Kettenregeln
     für reelle Funktionen anwenden und ausrechnen). $\rightarrow$ Übung
   \end{proof}
@@ -4754,7 +4755,7 @@ Zu beginn einige Wiederholungen:
    \item für jede stückweise stetig differenzierbare geschlossene Kurve
     $\Gamma\subset G$ ist $\int_{\Gamma} f(z)\,dz = 0$
    \item Für je zwei stetige Polygonzüge in $\Gamma$ und $\Gamma'$ in
-    $G$, die zwei beiliebige Punkte $z_{1}\in G$ und $z_{2}\in G$
+    $G$, die zwei beliebige Punkte $z_{1}\in G$ und $z_{2}\in G$
     verbunden sind, gilt:
     \begin{gather*}
       \int_{\Gamma} f(z)\,dz = \int_{\Gamma'} f(z)\,dz
@@ -4898,7 +4899,7 @@ $\int_{\Gamma} f(z)\,dz =0$.
       $\Delta$ finden, die nicht $a$ enthält und wir können \todo{link
       lemma 1} anwenden. Also $\int_{\partial\Delta} h\,dz =0$
 
-     \item Ist $a$ ein Eckpunkt des Dreicks (\obda $a=z_{1}$), können wir
+     \item Ist $a$ ein Eckpunkt des Dreiecks (\obda $a=z_{1}$), können wir
       das Dreieck $\Delta$ in drei Einzeldreiecke $\Delta_{1},
       \Delta_{2},\Delta_{3}$ zerlegen, so dass $a$ nur im Dreick
       $\Delta_{1}$ liegt. Nach dem ersten Fall sind die Integrale über
@@ -4962,7 +4963,7 @@ $\int_{\Gamma} f(z)\,dz =0$.
 \end{bsp}
 
 \begin{bemerk}
-  $\Gamma\subset \C$ geschlossener Polygonzug, doppelpunktfrei
+  Sei $\Gamma\subset \C$ geschlossener Polygonzug, doppelpunktfrei
   (Jordanscher Polygonzug) $\Rightarrow$ Das Komplement von $\Gamma$
   besteht aus zwei disjunkten Gebieten. Eines der Gebiet ist beschränkt
   ("`Innengebiet"') (und einfach zusammenhängend), das andere ist
@@ -5183,7 +5184,7 @@ $\int_{\Gamma} f(z)\,dz =0$.
   \end{enumerate}
 
   \begin{proof}
-    \begin{enumerate}[1.\,Schritt]
+    \begin{enumerate}[1.\,Schr{i}tt]
      \item (1) $G_{0} = K_{R}(z_{0})$ \todo{Satz 2} $\Rightarrow$
       \begin{gather*}
         f(z) = \frac{1}{2\pi i} \oint_{\abs{\zeta-z_{0}}=\rho}
@@ -5228,7 +5229,7 @@ $\int_{\Gamma} f(z)\,dz =0$.
    \item $f$ lokal als Potenzreihe darstellbar (d.\,h. in jedem Punkt aus
     $K_{r}(z_{0})\subset G$)
    \item $f(x+iy) = u(x,y) + iv(x,y)$ und $u,v$ differenzierbar in $G$
-    und es gelten die Cauchy-Riemannsche-Differentialgleichungen.
+    und es gelten die Cauchy-Riemannsche Differentialgleichungen.
   \end{enumerate}
 \end{folger}
 
@@ -5303,9 +5304,9 @@ $\int_{\Gamma} f(z)\,dz =0$.
   \begin{proof}
     analog zu \autoref{lem:3}
 
-    Wir schreiden den Kreisring $K$ mit einem Strahl $\delta$ aus $z_{0}$
+    Wir schneiden den Kreisring $K$ mit einem Strahl $\delta$ aus $z_{0}$
     auf. Damit ergeben sich zwei zusammhängende Gebiete $I_{1}$ und
-    $-I_{2}$ deren Summe nach dem Cauchy'schen-Integralsatz Null seien
+    $-I_{2}$ deren Summe nach dem Cauchy'schen Integralsatz Null seien
     muss.
   \end{proof}
 \end{lemma}
@@ -5402,7 +5403,7 @@ $\int_{\Gamma} f(z)\,dz =0$.
       \sum_{k=1}^\infty a_{-k} z^k$. Diese ist somit eine Potenzreihe
       und es folgt, dass $\Phi$ holomorph für $\lvert z\rvert
       <\frac{1}{r}$ ist. Weiter kann man folgern, dass gilt $f_1(z)=
-      f_1(z_0+z-z_0) =\Phi(\frac{1}{(z-z_0)}$ und man sieht, dass
+      f_1(z_0+z-z_0) =\Phi(\frac{1}{(z-z_0)})$ und man sieht, dass
       $f_1$ holomorph in $\lvert z-z_0\rvert >r$ ist.
     \item Nun ist noch offen, dass die $(a_k)$ eindeutig bestimmt
       sind. Wir nehmen an, $f(z)= \sum_{k=0}^\infty b_k (z-z_0)^k +
@@ -5509,7 +5510,7 @@ $\int_{\Gamma} f(z)\,dz =0$.
   (beschreibt wie oft eine Kurve um einen Punkt eine 360°-Drehung
   vollzieht)
 
-  dazu wählen wir für $\Gamma$ eine Parameterdarstellung als
+  Dazu wählen wir für $\Gamma$ eine Parameterdarstellung als
   Polarkoordinaten mit $z_{0}$ als Nullpunkt und einen beliebigen festen
   Strahl aus $z_{0}$ als den Winkel null.
   \begin{gather*}
@@ -5695,7 +5696,7 @@ $\int_{\Gamma} f(z)\,dz =0$.
       von $M$ $\Rightarrow$ $h(z_{0}) = 0$, da $h$ stetig in $z_{0}$.
 
       zeigen $h^{(k)}(z_{0}) = 0 (\forall k\in \N)$ Annahme: Sei $m$ die
-      kleinste natrüliche Zahl mit $h^{(m)}(z_{0})\ne0$
+      kleinste natürliche Zahl mit $h^{(m)}(z_{0})\ne0$
       Potenzreihenentwicklung von $h$ in $z_{0}$
       (\autoref{satz:10.2.4/6}) $\Rightarrow$
       \begin{gather*}
