* skript.latex:   + Endlich mal Änderungen eingespielt, die ich schon lange hier liegen     habe.
  + Alle |^ durch \uparrow ersetzt

  + Alle |v durch \downarrow ersetzt

  + andere Verbesserungen


git-svn-id: https://svn.lug-jena.de/uni-skripte@302 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/engelbert-mass-integral/skript.latex
+++ b/engelbert-mass-integral/skript.latex
@@ -215,8 +215,8 @@ Beweis: B"sin e: $f^{-1}_{|\Omega_{0}}(B)=\underbrace{f^{-1}(B)}_{\in
   ($\Omega,F)$, (E,e), $\mathfrak{S} \subseteq e,
   \sigma(\mathfrak{S})=\mathfrak{e}$ ($\mathfrak{S}$
   erzeugt $\mathfrak{e}$ bzw. $\mathfrak{S}$ ist ein Erzeugendensystem f"ur $\mathfrak{E}$)
-  f:$\Omega\quad\rightarrow\quad E$
-  f:($\Omega$,F)$\quad\rightarrow\quad(E,\mathfrak{E})$ messbar
+  $f:\Omega\quad\rightarrow\quad E$
+  $f:(\Omega,F)\rightarrow(E,\mathfrak{E})$ messbar
   $\quad\Longleftrightarrow\quad$ $f^{-1}(B)\in F, \forall B\in \mathfrak{S}$
   \begin{proof}
     \begin{enumerate}[I.]
@@ -270,21 +270,21 @@ Beweis: B"sin e: $f^{-1}_{|\Omega_{0}}(B)=\underbrace{f^{-1}(B)}_{\in
 $\hat{\R}:=\R\cup{-\infty,\infty}=[-\infty,\infty]$
 
 Rechenregeln:
-\begin{enumerate}
- \item (\plusminus$\infty$)+(+-$\infty$)=+-$\infty$
- \item x+(+-$\infty$)=(+-$\infty$)+x=+-$\infty$, x \in \R
- \item x-(+-$\infty$)=-+$\infty$, x\in \R
- \item (+-$\infty$)(+-$\infty$)=+$\infty$
- \item (+-$\infty$)(-+$\infty$)=(-+$\infty$)(+-$\infty$)=-$\infty$
- \item x(+-$\infty$)=(+-$\infty$)x=+-$\infty$, x>0
- \item x(+-$\infty$)=(+-$\infty$)x=+-$\infty$, x<0
- \item 0\,(+-$\infty$)=0
-\end{enumerate}
+\begin{flalign}
+ (\pm \infty)+(\pm\infty)=\pm\infty\\
+ x+(\pm\infty)=(\pm\infty)+x=\pm\infty, x \in \R\\
+ x-(\pm\infty)=\mp\infty, x\in \R\\
+ (\pm\infty)(\pm\infty)=+\infty\\
+ (\pm\infty)(\mp\infty)=(\mp\infty)(\pm\infty)=-\infty\\
+ x(\pm\infty)=(\pm\infty)x=\pm\infty, x>0\\
+ x(\pm\infty)=(\pm\infty)x=\pm\infty, x<0\\
+ 0\,(\pm\infty)=0
+\end{flalign}
 
 Verboten:
 \begin{enumerate}
- \item (+-$\infty$)-(+-$\infty$)
- \item (+-$\infty$)+(-+$\infty$)
+ \item $(\pm\infty)-(\pm\infty)$
+ \item $(\pm\infty)+(\mp\infty)$
 \end{enumerate}
 
 h(x)={1& :x=+\infty\\\frac{x}{1+|x|}&:x\in\R\\
@@ -1740,7 +1740,7 @@ Approximation durch kompakte Mengen
     \begin{description}
      \item[I. Reduktion auf dem Fall eines \emph{endlichen} Ma"ses m]:
     
-    m $\sigma$-endlich $\Rightarrow$ $\exists$ $E_{n}$ |^ E, $E_{n}\in
+    m $\sigma$-endlich $\Rightarrow$ $\exists$ $E_{n}$ \uparrow E, $E_{n}\in
     \mathcal{B}(E), m(E_{n})<\infty, n\geq 1$
     
     $m_{n}(A) := m(A\cap E_{n}), A\in \mathcal{B}(E)$ $m_{n}$ endliches Ma"s
@@ -1943,7 +1943,7 @@ Approximation durch kompakte Mengen
 	     f(\omega)<\frac{k+1}{2^{n}}, k=0,\ldots,n2^{n}-1\\
 	     n& f(\omega)\geq n
 	   \end{case}
-	f_{n}(\omega) |^_{n\rightarrow\infty} f(\omega), \forall \omega\in\Omega
+	f_{n}(\omega) \uparrow_{n\rightarrow\infty} f(\omega), \forall \omega\in\Omega
       \end{gather}
     \end{proof}
   \end{satz}
@@ -1975,7 +1975,7 @@ Approximation durch kompakte Mengen
       
       Sei $\epsilon>0$ $\Omega_{n}:=\{f-\epsilon\leq g_{n}\}$
       $\Rightarrow \Omega_{n}\in \mathcal{F}$ (nach 3.9.E1),
-      $\Omega_{n}|^\Omega$
+      $\Omega_{n}\uparrow\Omega$
       (f-$\epsilon) 1_{\Omega_{n}}\leq g_{n}1_{\Omega_{n}}\leq g_{n}
       \Rightarrow \max\{f-\epsilon,0\}1_{\Omega_{n}}\leq g_{n}$
       
@@ -2021,10 +2021,10 @@ Approximation durch kompakte Mengen
     
     \begin{proof}
       ($f_{n}$), ($g_{n}$) Folgen von nichtnegativen einfachen
-      Funktionen, $f_{n}|^f, g_{n}|^g$
+      Funktionen, $f_{n}\uparrow f, g_{n}\uparrow g$
       
       $\Rightarrow$ $af_{n}+bg_{n}$ nichtneg. einfach,
-      $af_{n}+bg_{n}|^af+bg$\\
+      $af_{n}+bg_{n}\uparrowaf+bg$\\
       $\Rightarrow$$\int_{\Omega}(af+bg)\mathfrak{m}:=
       \lim_{n\rightarrow\infty}\int_{\Omega} (af_{n}+bg_{n})dm
       =^{E1.4.}\lim_{n\rightarrow\infty}
@@ -2035,7 +2035,7 @@ Approximation durch kompakte Mengen
       $\int_{\Omega}fdm \leq \int_{\Omega}g \mathfrak{m}$
       
       \begin{proof}
-	Anwendung von Satz~2: $f_{n}|^f, g_{n}|^g, f_{n}, g_{n}$ nicht
+	Anwendung von Satz~2: $f_{n}\uparrowf, g_{n}\uparrowg, f_{n}, g_{n}$ nicht
 	negativ und einfach $\Rightarrow$ $\lim_{n\rightarrow\infty}
 	f_{n} \leq\lim_{n\rightarrow\infty} g_{n} \Rightarrow^{Satz
 	2}\lim_{n\rightarrow\infty}\int f_{n}dm
@@ -2052,7 +2052,7 @@ Approximation durch kompakte Mengen
        \item ``$\Rightarrow$'' (Kontraposition)
 	Ann.: m(\{f>0\})>0
 	
-	Sei ($f_{n}$) Folge nichtneg. einfacher Funktionen, $f_{n}|^f$
+	Sei ($f_{n}$) Folge nichtneg. einfacher Funktionen, $f_{n}\uparrowf$
 	0<m(\{f>0\})=m($\bigcup_{n=1}^{\infty}\{f_{n}>0\}) =
 	\lim_{n\rightarrow\infty} m(\{f_{n}> 0\}) \Rightarrow \exists n:
 	m(\{f_{n}>0\}) > 0 \Rightarrow^{E1.6} \int_{\Omega} f_{n} \mathfrak{m} > 0
@@ -2061,7 +2061,7 @@ Approximation durch kompakte Mengen
 	
 	Es gelte: f=0 m fast "uberall
 	Sei ($f_{n}$) Folge nichtneg. einfacher Funktionen,
-	$f_{n}|^f\Rightarrow f_{n}=0$ m fast "uberall
+	$f_{n}\uparrowf\Rightarrow f_{n}=0$ m fast "uberall
 	$\Rightarrow^{E1.6}\int_{\Omega} f_{n}\mathfrak{m} =0,\forall n \Rightarrow
 	\int_{\Omega} fdm := \lim_{n\rightarrow\infty} \int_{\Omega}
 	f_{n}\mathfrak{m} =0$
@@ -2277,7 +2277,7 @@ Approximation durch kompakte Mengen
 	\int_{\Omega}f_{n}\,\mathfrak{m} \leq \int_{\Omega}f\,\mathfrak{m} \Rightarrow
 	\lim_{n\rightarrow\infty}\int_{\Omega} f_{n}\,\mathfrak{m} \leq\int_{\Omega}f\,\mathfrak{m}$
        \item ``$f_{n}\geq f$
-	$\exists \lim_{m\rightarrow\infty}f_{n,m}|^f_{n}, f_{n,m}$
+	$\exists \lim_{m\rightarrow\infty}f_{n,m}\uparrowf_{n}, f_{n,m}$
 	nichtnegativ einfach
 	
 	g:=$\max_{1\leq n\leq m}f_{n,m}$ einfache me"sbare Funktion
@@ -2677,7 +2677,7 @@ $X_{1}(\omega) = \omega_{1}, X_{2}(\omega)=\omega_{2}$
      \item f me"sbar auf ($\Omega$, \mathcal{F}), f$\geq$0
       
       $\exists f_{n}: f_{n}\geq0$ und einfach,
-      $f_{n}|^_{n\rightarrow\infty}f$
+      $f_{n}\uparrow_{n\rightarrow\infty}f$
 
       $\Rightarrow$
       \begin{gather}
@@ -2946,7 +2946,7 @@ Ungleichung von Young
   Dann ist die Dichte $f$ von $\mu$ bzgl. $\mathcal{m}$ $\mathcal{m}$-f"u. eindeutig bestimmt.
   
   \begin{proof}
-    $\Omega_{n} |^ \Omega, \Omega_{n}\in \mathcal{F} \mathcal{m}(\Omega_{n})<\infty$
+    $\Omega_{n} \uparrow \Omega, \Omega_{n}\in \mathcal{F} \mathcal{m}(\Omega_{n})<\infty$
     
     Seien $f_{1}, f_{2}$ Dichten von $\mu$ bzgl. $\mathcal{m}$, $\Omega_{n}' =
     \{f_{1} \leq n, f_{2}\leq n\}$, $f_{i}\cdot
@@ -3162,7 +3162,7 @@ Ungleichung von Young
     \begin{enumerate}
      \item h=$1_{A}, A\in \mathcal{F}$
      \item h einfach, h$\geq$ 0
-     \item h $\geq$ 0 me"sbar: $\exists$ $h_{n}|^h, h_{n} \geq0$ einfach
+     \item h $\geq$ 0 me"sbar: $\exists$ $h_{n}\uparrowh, h_{n} \geq0$ einfach
     \end{enumerate}
   \end{proof}
 \end{satz}
@@ -3429,7 +3429,7 @@ Vorraussetzungen:
 \begin{lemma} %2
   Sei $r$ eine wachsende Funktion f"ur die gilt:
   \begin{gather}
-    \lim_{a|v 0} r(a) = 0
+    \lim_{a\downarrow 0} r(a) = 0
   \end{gather}
   
   \begin{gather}
@@ -3458,7 +3458,7 @@ Vorraussetzungen:
 	 x_{k}}(y)-\frac{\partial t_{i}}{\partial x_{k}}(x)|\\
       |R_{x}(z)| \leq n\,r(|z-x|) |z-x|
     \end{gather}
-    f"ur $a|v 0: r(a) |v 0$ (Gleichm. stetigkeit der pariellen Ableitungen), $r$ wachsend
+    f"ur $a\downarrow 0: r(a) \downarrow 0$ (Gleichm. stetigkeit der pariellen Ableitungen), $r$ wachsend
   \end{proof}
 \end{lemma}
 
@@ -3481,7 +3481,7 @@ Vorraussetzungen:
       
       Annahme: Sei Satz 3 g"ultig unter 1-6
       Betrachten $t: G\rightarrow G' mit 1-3$
-      Es existiere $G_{m}|^ G: G_{m}$ offen, beschr"ankt,
+      Es existiere $G_{m}\uparrow G: G_{m}$ offen, beschr"ankt,
       $\bar{G_{m}}\subseteq G (\Rightarrow \bar{G_{m}}$ kompakt)
       t: $G_{m} \rightarrow G'_{m} \rightarrow G_{m}'=t(G_{m}),
       \bar{G'_{m}}$ kompakt
@@ -3492,7 +3492,7 @@ Vorraussetzungen:
       \begin{gather}
 	\lambda^{n}(t(A\cap G_{m})) = \int_{A\cap G_{m}}|det t'(x)|
 	   \lambda^{n}(dx),\quad A\in \mathcal{B}(\R^{n}), A\subseteq G\\
-	|v m\rightarrow\infty |v m\rightarrow\infty\\
+	\downarrow m\rightarrow\infty \downarrow m\rightarrow\infty\\
 	\lambda^{n}(t(A)) = \int_{A}|det t'(x)|\lambda^{n}(dx)
       \end{gather}
      \item $t:G\rightarrow G'$ erf"ulle 1-6
@@ -3521,7 +3521,7 @@ Vorraussetzungen:
 	b=($b_{1},\ldots,b_{n})^{T} := (t'(x))^{-1}t(x')$
 	
 	$\Rightarrow$ Es existiert
-	$\varepsilon_{m}|v_{m\rightarrow\infty}0: t(W_{m}(x)) \subseteq
+	$\varepsilon_{m}\downarrow_{m\rightarrow\infty}0: t(W_{m}(x)) \subseteq
 	t'(x')(\times_{i=1}^{n}[b_{i}-\frac{1+\varepsilon_{m}}{2^{m+1}},
 	b_{i}+\frac{1+\varepsilon_{m}}{2^{m+1}}]$
 	
@@ -3831,7 +3831,7 @@ H$\subseteq\mathbb{B}(\Omega,\mathcal{F})$ mit folgenden Eigenschaften:
   \begin{enumerate}
    \item I ist linear
    \item I ist positiv, f\in H, f$\geq$0 $\Rightarrow$ I(f) $\geq$0
-   \item I ist stetig bzgl. monotoner Konvergenz: $f_{n}\in H, f_{n}|v
+   \item I ist stetig bzgl. monotoner Konvergenz: $f_{n}\in H, f_{n}\downarrow
     0(n\rightarrow\infty)$ punktweise $\Rightarrow$
     $\lim_{n\rightarrow\infty}I(f_{n})=0$
   \end{enumerate}
@@ -3915,7 +3915,7 @@ H$\subseteq\mathbb{B}(\Omega,\mathcal{F})$ mit folgenden Eigenschaften:
 	I($1_{K}$), f\in C(K) $\Rightarrow$ I beschr"ankt $\Rightarrow$ I stetig
       \end{enumerate}
      \item I stetig bzgl. \|$\cdot$\| $\rightarrow$ I stetig bzgl.
-      monotoner Konvergenz $f_{n}\in C(K), f_{n}(x) |v 0
+      monotoner Konvergenz $f_{n}\in C(K), f_{n}(x) \downarrow 0
       (n\rightarrow\infty) \rightarrow^{Satz von Dini} ||f_{n}||
       \xrightarrow^{n\rightarrow\infty}0 \rightarrow^{nach I} I(f_{n})
       \rightarrow^{n\rightarrow\infty}0$
@@ -3952,10 +3952,10 @@ H$\subseteq\mathbb{B}(\Omega,\mathcal{F})$ mit folgenden Eigenschaften:
 	 \mathcal{m}(N)=0\\
       F_{nk}= \bigcup_{j=n}^{\infty}\{\omega\in\Omega:
 	 |f_{j}(\omega)-f(\omega)|\geq 2^{-k}\}\cap N^{C},
-	 F_{nk}|v\emptyset (n\rightarrow\infty)\label{XXx}
+	 F_{nk}\downarrow\emptyset (n\rightarrow\infty)\label{XXx}
     \end{gather}
     
-    $\varepsilon>0$ Es existiert ein n(k) mit
+    $\varepsilon>0$ Es existiert ein $n(k)$ mit
     $\mathcal{m}(F_{n(k)\,k})<\varepsilon 2^{-k}$
     
     \begin{gather}
@@ -3979,21 +3979,22 @@ H$\subseteq\mathbb{B}(\Omega,\mathcal{F})$ mit folgenden Eigenschaften:
   Dann folgt: F"ur alle $\varepsilon>0$ existiert eine abgeschlossene
   Menge $F\subseteq\Omega$ mit den folgenden Eigenschaften:
   \begin{enumerate}
-   \item $f_{|F}$ (Einschr"ankung von $f$ auf $F$) ist  stetig
+   \item $f\big|_{F}$ (Einschr"ankung von $f$ auf $F$) ist stetig
    \item $\mathcal{m}(F^{C})<\varepsilon$
   \end{enumerate}
   
   \begin{proof}
-    $\{a_{1}, a_{2},\ldots\}$ abz"ahlbare dichte Menge in $E$
+    Sei $\{a_{1}, a_{2},\ldots\}$ eine abz"ahlbare dichte Menge in $E$.
     
-    \begin{gather}
-      B_{nk} = f^{-1}(S_{2^{-k}}(a_{n})), n,k=1,2,\ldots\\
-      D_{nk} = B_{nk}\setminus\bigcup_{j=1}^{\infty} B_{nk},
-	 n,k=1,2,\ldots\\
-      D_{nk} \text{paarw. disj.}, n=1,2,\ldots, k \text{fest}\\
-      A_{nk}= \bigcup_{j=1}^{\infty} D_{jk} =
-	 \bigcup_{j=1}^{\infty}B_{jk} |^\Omega (n\rightarrow\infty)
-    \end{gather}
+    \begin{align*}
+      B_{nk} &= f^{-1}(S_{2^{-k}}(a_{n})) &&n,k=1,2,\ldots\\
+      D_{nk} &= B_{nk}\setminus\bigcup_{j=1}^{\infty} B_{nk}
+	 &&n,k=1,2,\ldots\\
+      \intertext{Die $D_{nk}$ sind paarw. disj. für $n=1,2,\ldots,$ und
+        $k$ fest}
+      A_{nk} &= \bigcup_{j=1}^{\infty} D_{jk} =
+	 \bigcup_{j=1}^{\infty}B_{jk} \uparrow\Omega &&n\rightarrow\infty
+    \end{align*}
     
     Beweis f"ur letzte Gleichung:
     \begin{gather}
