--- a/mundhenk-logik/skript.latex
+++ b/mundhenk-logik/skript.latex
@@ -1,10 +1,6 @@
 % ToDo:
-%  * sollen Indunktionen eine description oder mdescription sein?
 %  * faelle schachtelbar machen
 %  * Eine Umgebung für die Beweise?
-%  * für MP in den Beweisen immer einen Link auf den modus ponens.
-%  * ebenso für DT
-%
 %
 % Einige zusätzliche Informationen für rubber
 %  rubber erkennt nicht, dass die Datei weg kann, daher sagen wir es ihm
@@ -25,7 +21,7 @@
 
 \usepackage{ifthen}
 \usepackage{makeidx}
-% \usepackage[final]{graphicx}  % Für Grafiken
+\usepackage[final]{graphicx}  % Für Grafiken
 \usepackage{color}
 \usepackage[draft=false,colorlinks,bookmarksnumbered,linkcolor=blue]{hyperref}
 
@@ -53,7 +49,7 @@
                          % dafür muss in SVN noch das Flag svn:keywords
                          % auf "LastChangedRevision LastChangedDate"
                          % gesetzt werden
-% \usepackage{ifpdf}       % Erkennung, ob PDF generiert wird; nützlich zur
+\usepackage{ifpdf}       % Erkennung, ob PDF generiert wird; nützlich zur
                          % Unterscheidung bei Grafiken \input{XYZ.pdf_t}
 \usepackage{xkeyval}     % für die Auswertung von Argumentenlisten; s.
                          % Neudefinition von \emph
@@ -415,8 +411,13 @@ $A\rightarrow B$ wahr.
   \end{tabular}
 \end{center}
 
-\emph{Verknüpfungsbaum}: \todo{Bild vom Verknüpfungsbaum der obigen
-aussagenlogische Formel}
+\begin{figure}[h]
+  \centering
+  \ifpdf\input{verkn-baum.pdf_t}\else\input{verkn-baum.ps_t}\fi
+  \caption{\emph[rand=]{Verknüpfungsbaum} für die Formel
+    $\big(A\rightarrow(B\vee C)\big) \leftrightarrow
+    \big(\neg(A\rightarrow(B\vee C))\big)$}
+\end{figure}
 
 Die Zuordnung von Wahrheitswerten zu Variablen nennt man eine
 \emph{Belegung}. Die Belegung ist eine Funktion von Variablen auf
@@ -624,7 +625,7 @@ Formel in disjunktiver Normalform. (ohne Beweis)
     $\alpha$ nur die Verknüpfungszeichen $\neg, \wedge, \vee$. Wir führen
     eine Induktion über den Formelaufbau.
 
-    \begin{description}
+    \begin{mdescription}
      \item[IA:] $\alpha$ ist eine Variable $A$
 
      \item[IV:] Für beliebige Formeln $\beta$ und $\gamma$ gibt es
@@ -634,25 +635,25 @@ Formel in disjunktiver Normalform. (ohne Beweis)
      \item[IS:]
       \begin{faelle}
        \item $\alpha=\neg\beta$. Dann gilt: $\alpha\equiv\neg\beta'$ und
-        $\neg\beta'$ enthält nach IV nur $\neg$ und $\wedge$.
+        $\neg\beta'$ enthält nach Induktionsvorraussetzung nur $\neg$ und $\wedge$.
 
        \item $\alpha = \beta\wedge\gamma$. Dann gilt:
-        $\alpha\equiv\beta'\wedge\gamma'$. Nach IV hat
+        $\alpha\equiv\beta'\wedge\gamma'$. Nach Induktionsvorraussetzung hat
         $\beta'\wedge\gamma'$ nur $\neg$ und $\wedge$ als
         Verknüpfungszeichen.
 
        \item $\alpha=\beta\vee\gamma$. Dann gilt:
         $\alpha\equiv\beta'\vee\gamma'\equiv\neg(\neg\beta'\wedge\gamma')$
-        Nach IV hat $\neg(\neg\beta'\wedge\gamma')$ nur $\neg$ und
+        Nach Induktionsvorraussetzung hat $\neg(\neg\beta'\wedge\gamma')$ nur $\neg$ und
         $\wedge$ als Verknüpfungszeichen.
       \end{faelle}
-    \end{description}
+    \end{mdescription}
   \end{proof}
 \end{satz}
 
 \begin{bsp}
   $A\vee B$ kann unter Nutzung von Doppelnegation ($\neg\neg A =A$) und
-  der Demorganschen Regel ($\neg(A\wedge B) \equiv \neg A\vee \neg B$)
+  der de Morgan'schen Regel ($\neg(A\wedge B) \equiv \neg A\vee \neg B$)
   umformen:
   \begin{gather*}
     A\vee B \equiv \neg\neg A \vee \neg\neg B \equiv \neg(\neg
@@ -791,15 +792,15 @@ Tautologie ist. Dazu benutzt man den Begriff der \emph{Theorie}.
 
    \item den Axiomen, die aus dem Axiomenschemata (A1), (A2) und (A3)
     durch Einsetzen von beliebigen aussagenlogische Formeln für $\alpha$,
-    $\beta$ und $\gamma$ entstehen:
+    $\beta$ und $\gamma$ entstehen: \index{Axiome}
     \begin{enumerate}[({A}1)]
-     \item $\alpha \rightarrow (\beta\rightarrow \alpha)$ \label{A1}
+     \item $\alpha \rightarrow (\beta\rightarrow \alpha)$
      \item $\big(\alpha\rightarrow (\beta\rightarrow\gamma)\big)
       \rightarrow \big( (\alpha\rightarrow\beta) \rightarrow
-      (\alpha\rightarrow\gamma) \big)$ \label{A2}
+      (\alpha\rightarrow\gamma) \big)$
      \item $( \neg\beta \rightarrow \neg\alpha )
       \rightarrow \big( ( \neg\beta \rightarrow \alpha) \rightarrow
-      \beta\big)$ \label{A3}
+      \beta\big)$
     \end{enumerate}
 
    \item der Ableitungsregel \emph{modus ponens} (MP) \index{MP|see{modus ponens}}
@@ -852,12 +853,12 @@ $\alpha\rightarrow\gamma$ wahr ist, dann muss auch $\gamma$ wahr sein.
   Wir konstruieren eine Folge $\alpha_1,\ldots,\alpha_5$ wie folgt:
   \begin{align*}
     \alpha_1 &= B\rightarrow(B\rightarrow B)
-       &\text{\hyperref[A1]{Axiom 1}}\\
+       &\text{Axiom 1}\\
     \alpha_2 &= B\rightarrow((B\rightarrow B) \rightarrow B)
-       &\text{\hyperref[A1]{Axiom 1}}\\
+       &\text{Axiom 1}\\
     \alpha_3 &= (B\rightarrow((B\rightarrow B) \rightarrow B)) \rightarrow\\
     &\hspace{1.4cm} ((B\rightarrow(B\rightarrow
-       B))\rightarrow(B\rightarrow B)) &\text{\hyperref[A2]{Axiom 2}}\\
+       B))\rightarrow(B\rightarrow B)) &\text{Axiom 2}\\
     \alpha_4 &= (B\rightarrow(B\rightarrow B))\rightarrow(B\rightarrow B)
        &\text{MP auf $\alpha_2$, $\alpha_3$}\\
     \alpha_5 &= B\rightarrow B
@@ -909,11 +910,11 @@ $\alpha\rightarrow\gamma$ wahr ist, dann muss auch $\gamma$ wahr sein.
     (2)\quad & \beta\rightarrow\gamma & \text{Hypothese}\\
     (3)\quad & (\beta\rightarrow\gamma) \rightarrow
        (\alpha\rightarrow(\beta\rightarrow\gamma)) &
-       \text{\hyperref[A1]{Axiom 1}} \\
+       \text{Axiom 1} \\
     (4)\quad & \alpha\rightarrow(\beta\rightarrow\gamma) & \text{MP 2,3}\\
     (5)\quad & (\alpha\rightarrow(\beta\rightarrow\gamma)) \rightarrow
        ( (\alpha\rightarrow\beta) \rightarrow ( \alpha\rightarrow\gamma))
-       & \text{\hyperref[A2]{Axiom 2}} \\
+       & \text{Axiom 2} \\
     (6)\quad & (\alpha\rightarrow\beta) \rightarrow ( \alpha\rightarrow\gamma)
        & \text{MP 4,5} \\
     (7)\quad & \alpha\rightarrow\gamma & \text{MP 1,6}
@@ -922,7 +923,7 @@ $\alpha\rightarrow\gamma$ wahr ist, dann muss auch $\gamma$ wahr sein.
 
 \subsection{Deduktionstheorem}
 
-\begin{satz}[Deduktionstheorem]
+\begin{satz}[Deduktionstheorem]\index{Deduktion}
   Sind $\alpha$ und $\beta$ zwei aussagenlogische Formeln und $\Gamma$
   eine Formelmenge, dann gilt:
   \begin{gather*}
@@ -934,7 +935,7 @@ $\alpha\rightarrow\gamma$ wahr ist, dann muss auch $\gamma$ wahr sein.
       \item["`$\Leftarrow$"'] gelte $\Gamma \vdash_{\mathrm{L}} \alpha\rightarrow\beta$.
 
       Da $\Gamma, \alpha \vdash_{\mathrm{L}} \alpha$ und $\Gamma, \alpha \vdash_{\mathrm{L}}
-      \alpha\rightarrow\beta$ folgt mittels Anwendung von MP:
+      \alpha\rightarrow\beta$ folgt mittels Anwendung von modus ponens:
       $\Gamma,\alpha \vdash_{\mathrm{L}} \beta$
 
      \item["`$\Rightarrow$"'] Es gelte $\Gamma, \alpha \vdash_{\mathrm{L}} \beta$
@@ -947,13 +948,13 @@ $\alpha\rightarrow\gamma$ wahr ist, dann muss auch $\gamma$ wahr sein.
         \begin{faelle}
          \item $\beta$ ist ein Axiom oder $\beta\in\Gamma$.
 
-          Dann gilt $\Gamma \vdash_{\mathrm{L}} \beta$. Mit \hyperref[A1]{Axiom 1}
-          $\beta \rightarrow (\alpha\rightarrow\beta)$ und MP folgt
+          Dann gilt $\Gamma \vdash_{\mathrm{L}} \beta$. Mit Axiom 1
+          $\beta \rightarrow (\alpha\rightarrow\beta)$ und modus ponens folgt
           $\Gamma \vdash_{\mathrm{L}} \alpha \rightarrow\beta$.
           \begin{align*}
             (1)\quad &\beta&\text{Hypothese}\\
             (2)\quad &\beta\rightarrow(\alpha\rightarrow\beta)
-               &\text{\hyperref[A1]{Axiom 1}}\\
+               &\text{Axiom 1}\\
             (3)\quad &\alpha\rightarrow\beta &\text{MP 1,2}
           \end{align*}
 
@@ -980,13 +981,13 @@ $\alpha\rightarrow\gamma$ wahr ist, dann muss auch $\gamma$ wahr sein.
 
           geht genauso wie Indunktionsanfang.
 
-         \item $\beta$ entsteht durch MP aus $\alpha_{i}$ und
+         \item $\beta$ entsteht durch modus ponens aus $\alpha_{i}$ und
           $\alpha_{j}$ ($i,j\leq n$), $\alpha_{j}=(\alpha_{i}\rightarrow
           \beta)$
 
           Nach Indunktionsvorraussetzung gilt $\Gamma \vdash_{\mathrm{L}}
           \alpha\rightarrow\alpha_{i}$ und $\Gamma \vdash_{\mathrm{L}}
-          \alpha\rightarrow (\alpha_{i}\rightarrow\beta)$. Mit \hyperref[A2]{Axiom 2}
+          \alpha\rightarrow (\alpha_{i}\rightarrow\beta)$. Mit Axiom 2
           $(\alpha\rightarrow(\beta\rightarrow\gamma)) \rightarrow
           ((\alpha\rightarrow\beta)\rightarrow(\alpha\rightarrow\gamma))$
           ist $(\alpha\rightarrow(\alpha_{i}\rightarrow\beta)) \rightarrow
@@ -1024,12 +1025,12 @@ $\alpha\rightarrow\gamma$ wahr ist, dann muss auch $\gamma$ wahr sein.
     \begin{align*}
       (1)\quad &(\neg\beta \rightarrow \neg\neg\beta) \rightarrow ( (\neg\beta
          \rightarrow\neg\beta) \rightarrow \beta)
-         &\text{\hyperref[A3]{Axiom 3}}\\
+         &\text{Axiom 3}\\
       (2)\quad &\neg\beta \rightarrow \neg\beta&\text{\autoref{bsp:1}}\\
       (3)\quad &(\neg\beta \rightarrow \neg\neg\beta) \rightarrow \beta
          &\text{aus 1,2 mit \autoref{lem:1}}\\
       (4)\quad &\neg\neg\beta \rightarrow (\neg\beta \rightarrow \neg\neg\beta)
-         &\text{\hyperref[A1]{Axiom 1}}\\
+         &\text{Axiom 1}\\
       (5)\quad &\neg\neg \beta \rightarrow\beta &\text{aus 4, 3 mit
          \autoref{lem:1}}
     \end{align*}
@@ -1067,13 +1068,13 @@ $\alpha\rightarrow\gamma$ wahr ist, dann muss auch $\gamma$ wahr sein.
   \begin{align*}
     (1)\quad & (\neg\neg\neg \beta\rightarrow \neg\beta)\rightarrow
        ((\neg\neg\neg\beta\rightarrow\beta)\rightarrow \neg\neg\beta) &
-       \text{\hyperref[A3]{Axiom 3}}\\
+       \text{Axiom 3}\\
     (2)\quad & \neg\neg\neg\beta \rightarrow \neg\beta &
        \text{\autoref{lem:2}}\\
     (3)\quad & (\neg\neg\neg\beta\rightarrow\beta)\rightarrow
        \neg\neg\beta &\text{MP 2,1}\\
     (4)\quad & \beta \rightarrow (\neg\neg\neg\beta \rightarrow \beta)
-       &\text{\hyperref[A1]{Axiom 1}}\\
+       &\text{Axiom 1}\\
     (5)\quad & \beta \rightarrow \neg\neg\beta
        &\text{\autoref{bsp:2} mit 4,3}\\
   \end{align*}
@@ -1086,14 +1087,14 @@ $\alpha\rightarrow\gamma$ wahr ist, dann muss auch $\gamma$ wahr sein.
     (1)\quad & \alpha & \text{Hyp} \\
     (2)\quad & \neg \alpha & \text{Hyp} \\
     (3)\quad & \alpha \rightarrow (\neg\beta \rightarrow \alpha) &
-       \text{\hyperref[A1]{Axiom 1}} \\
+       \text{Axiom 1} \\
     (4)\quad & \neg\beta \rightarrow \alpha & \text{MP 1,3} \\
     (5)\quad & \neg\alpha \rightarrow (\neg\beta \rightarrow \neg\alpha) &
-       \text{\hyperref[A1]{Axiom 1}} \\
+       \text{Axiom 1} \\
     (6)\quad & \neg\beta \rightarrow \neg\alpha & \text{MP 2,5} \\
     (7)\quad & (\neg \beta \rightarrow \neg \alpha) \rightarrow
        ((\neg\beta \rightarrow \alpha) \rightarrow \beta) &
-       \text{\hyperref[A3]{Axiom 3}} \\
+       \text{Axiom 3} \\
     (8)\quad & (\neg\beta \rightarrow \alpha) \rightarrow \beta &
        \text{MP 6,7} \\
     (9)\quad & \beta & \text{MP 4,8} \\
@@ -1161,7 +1162,7 @@ $\alpha\rightarrow\gamma$ wahr ist, dann muss auch $\gamma$ wahr sein.
     (6)\quad & \neg \beta\rightarrow \neg\neg\alpha & \text{MP 2,5} \\
     (7)\quad & (\neg \beta \rightarrow \neg\neg \alpha) \rightarrow
        ((\neg\beta\rightarrow\neg\alpha) \rightarrow \beta) &
-       \text{\hyperref[A3]{Axiom 3}}\\
+       \text{Axiom 3}\\
        (8)\quad & (\neg\beta\rightarrow\neg\alpha) \rightarrow \beta &
        \text{MP 6,7} \\
     (9)\quad & \beta & \text{MP 4,8}
@@ -1237,7 +1238,7 @@ aussagenlogische Tautologie. -- \autoref{satz:1})
     Sei $\phi_{\mathcal{A}} = \begin{cases} \phi & \mathcal{A}(\phi)=w\\
     \neg\phi & \mathcal{A}(\phi)=f\end{cases}$
 
-    \begin{description}
+    \begin{mdescription}
      \item[IA:] \todo{hier fehlt was}
 
      \item[IV:] für alle Formeln $\phi\in\mathcal{M}$ gilt $\mathcal{A}
@@ -1303,7 +1304,7 @@ aussagenlogische Tautologie. -- \autoref{satz:1})
             \begin{align*}
               (1)\quad & \beta &\text{IV}\\
               (2)\quad & \beta\rightarrow(\alpha\rightarrow\beta) &
-                 \text{\hyperref[A1]{Axiom 1}}\\
+                 \text{Axiom 1}\\
               (3)\quad & \alpha\rightarrow\beta &\text{MP 1,2}
             \end{align*}
             Also gilt $\mathcal{A} \vdash_{\mathrm{L}}
@@ -1312,7 +1313,7 @@ aussagenlogische Tautologie. -- \autoref{satz:1})
           \end{enumerate}
         \end{faelle}
       \end{itemize}
-    \end{description}
+    \end{mdescription}
   \end{proof}
 \end{satz}
 
@@ -1437,7 +1438,7 @@ $\mathcal{A}_{1}=\{\neg A, B\}, \mathcal{A}_{2}=\{\neg A,B\},
 
   \begin{proof}
     Induktion über die Größe $\abs{B}$ von $B$.\help{soll das B in
-    \\mathcal sein?}
+    \textbackslash{}mathcal sein?}
     \begin{description}
      \item[IA:] $\abs{B} = \abs{\mathcal{A}}$ dann ist $B=\mathcal{A}$
       und $B \vdash_{\mathrm{L}} \phi$ folgt aus \autoref{satz:2}, da
@@ -1447,10 +1448,9 @@ $\mathcal{A}_{1}=\{\neg A, B\}, \mathcal{A}_{2}=\{\neg A,B\},
       =\abs{\mathcal{A}}, \abs{\mathcal{A}}=1,\ldots,k$.
 
      \item[IS:] $B$ habe die Größe $k-1$. Dann gibt es eine Variable
-      $A_{l}$, die nicht von $B$ belegt wird. Nach IV gilt
+      $A_{l}$, die nicht von $B$ belegt wird. Nach Induktionsvorraussetzung gilt
       $B\cup\{A_{l}\} \vdash_{\mathrm{L}} \phi$ und $B\cup\{\neg A_{l}\}
-      \vdash_{\mathrm{L}} \phi$. Mit dem \todo{link suchen:
-      Deduktionstheorem} folgt
+      \vdash_{\mathrm{L}} \phi$. Mit dem Deduktionstheorem folgt
       \begin{gather*}
         B \vdash_{\mathrm{L}} A_{l} \rightarrow \phi \quad\text{und}\quad
            B \vdash_{\mathrm{L}} \neg A_{l} \rightarrow \phi
@@ -1525,7 +1525,7 @@ Sind die folgenden Argumentationen logisch korrekt?
        &\text{\autoref{bsp:1}}\\
     (2)\quad & (\neg \alpha \rightarrow \neg \alpha) \rightarrow \big(
        (\neg\alpha \rightarrow \alpha) \rightarrow \alpha\big)
-       &\text{\hyperref[A3]{Axiom 3}}\\
+       &\text{Axiom 3}\\
     (3)\quad & (\neg\alpha \rightarrow \alpha) \rightarrow \alpha
        &\text{MP 1,2}
   \end{align*}
@@ -1539,17 +1539,17 @@ Sind die folgenden Argumentationen logisch korrekt?
     (2)\quad & \beta &\text{Hypothese}\\
     (3)\quad & \big( \alpha \rightarrow (\beta \rightarrow \gamma) \big)
        \rightarrow \big( (\alpha \rightarrow \beta) \rightarrow
-       (\alpha\rightarrow\gamma)\big) &\text{\hyperref[A2]{Axiom 2}}\\
+       (\alpha\rightarrow\gamma)\big) &\text{Axiom 2}\\
     (4)\quad & (\alpha \rightarrow \beta) \rightarrow
        (\alpha\rightarrow\gamma) &\text{MP 1,3}\\
     (5)\quad & \beta \rightarrow (\alpha \rightarrow\beta)
-       &\text{\hyperref[A1]{Axiom 1}}\\
+       &\text{Axiom 1}\\
     (6)\quad & \beta \vdash \alpha\rightarrow\beta &\text{DT 5}\\
     (7)\quad & \alpha\rightarrow\beta &\text{2,6}\\
     (8)\quad & \alpha\rightarrow\gamma &\text{MP 7,4}
   \end{align*}
-  Mit DT wird aus $\alpha \rightarrow(\beta\rightarrow\gamma), \beta
-  \vdash \alpha\rightarrow\gamma$.
+  Mit Deduktionstheorem wird aus $\alpha \rightarrow
+  (\beta\rightarrow\gamma), \beta \vdash \alpha\rightarrow\gamma$.
 
  \item $\vdash_{\mathrm{L}} (\neg\beta\rightarrow\neg\alpha) \rightarrow
   (\alpha\rightarrow\beta)$ \label{enu:1}
@@ -1560,12 +1560,11 @@ Sind die folgenden Argumentationen logisch korrekt?
     (1)\quad & \neg\beta \rightarrow \neg\alpha &\text{Hypothese}\\
     (2)\quad & \alpha &\text{Hypothese}\\
     (3)\quad & (\neg\beta\rightarrow\neg\alpha) \rightarrow ((\neg\beta
-       \rightarrow \alpha) \rightarrow \beta) &\text{\hyperref[A3]{Axiom
-       3}}\\
+       \rightarrow \alpha) \rightarrow \beta) &\text{Axiom 3}\\
     (4)\quad & (\neg\beta\rightarrow\alpha) \rightarrow \beta &\text{MP
        1,3}\\
     (5)\quad & \alpha \rightarrow (\neg\beta\rightarrow\alpha)
-       &\text{\hyperref[A1]{Axiom 1}}\\
+       &\text{Axiom 1}\\
     (6)\quad & \neg\beta \rightarrow \alpha &\text{MP 2,5}\\
     (7)\quad & \beta &\text{MP 6,1}
   \end{align*}
@@ -1598,17 +1597,16 @@ Sind die folgenden Argumentationen logisch korrekt?
     (1)\quad & \alpha &\text{Hypothese}\\
     (2)\quad & \neg\alpha & \text{Hypothese}\\
     (3)\quad & \alpha \rightarrow (\neg\beta\rightarrow\alpha)
-       &\text{\hyperref[A1]{Axiom 1}}\\
+       &\text{Axiom 1}\\
     (4)\quad & \neg\alpha \rightarrow (\neg\beta \rightarrow\neg\alpha)
-       &\text{\hyperref[A1]{Axiom 1}}\\
+       &\text{Axiom 1}\\
     (5)\quad & \neg\beta \rightarrow \alpha &\text{MP 1,3}\\
     (6)\quad & \neg\beta \rightarrow \neg\alpha &\text{MP 2,4}\\
     (7)\quad & (\neg\beta \rightarrow \neg\alpha) \rightarrow ((\neg\beta
-       \rightarrow\alpha) \rightarrow \beta) &\text{\hyperref[A3]{Axiom
-       3}}\\
+       \rightarrow\alpha) \rightarrow \beta) &\text{Axiom 3}\\
     (8)\quad & (\neg\beta \rightarrow \alpha) \rightarrow \beta &\text{MP
        6,7}\\
-    (9)\quad & \beta \text{MP 5,8}
+    (9)\quad & \beta & \text{MP 5,8}
   \end{align*}
 \end{enumerate}
 
@@ -1624,13 +1622,13 @@ von Verknüpfungszeichen und Anzahl der Variablen in der Formel)
 \subsection*{Aufgabe 2}
 
 Sei $\mathrm{L}'$ die Theorie, die aus $\mathrm{L}$ entsteht, indem
-\hyperref[A3]{Axiom 3} ersetzt wird durch Axiom 3': $(\neg \alpha
+Axiom 3 ersetzt wird durch Axiom 3': $(\neg \alpha
 \rightarrow \neg\beta) \rightarrow(\beta\rightarrow\alpha)$.
 
 Zeigen Sie, dass $\mathrm{L}'$ korrekt und vollständig ist Das heißt,
 $\phi$ ist Tautologie \gdw $\vdash_{\mathrm{L}'} \phi$.
 
-% A3' aus \hyperref[A1]{Axiom 1}, \hyperref[A2]{Axiom 2}, MP und DT
+% A3' aus Axiom 1, Axiom 2, MP und DT
 % herleiten
 
 \clearpage
